# pyfacturx

./: .gitignore  README.md  pyproject.toml  setup.py
facturx/: facturx.py  pdfwriter.py
facturx/flavors/: fields.yml  xml_flavor.py
facturx/flavors/factur-x/xml/: en16931.xml  en16931_fe.xml
facturx/utils/: logger.py  writer_utils.py
